--- a/parking-dapp/parking-dapp.css
+++ b/parking-dapp/parking-dapp.css
@@ -1,10 +1,8 @@
 /* CSS declarations go here */
 html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    height: 100%;
 }
 
-.map-container {
-  height: 100%;
+h1 {
+    margin-bottom: 24px !important;
 }
