--- a/parking-dapp/parking-dapp.less
+++ b/parking-dapp/parking-dapp.less
@@ -1,2 +1,16 @@
 // libs
 @import '{ethereum:dapp-styles}/dapp-styles.less';
+
+.dapp-flex-content {
+    height: 100%;
+    width: 100%;
+    background-color: #ccc6c6 !important;
+}
+
+.dapp-content {
+    height: 90%;
+    width: 100%;
+    margin: 0 !important;
+    padding: 0 !important;
+    max-width: 100% !important;
+}
