use only less, create description in readme with big overview picture running and development section

--- a/parking-dapp/parking-dapp.less
+++ b/parking-dapp/parking-dapp.less
@@ -1,6 +1,18 @@
 // libs
 @import '{ethereum:dapp-styles}/dapp-styles.less';
 
+html, body {
+  height: 100%;
+}
+
+h1 {
+  margin-bottom: 24px !important;
+}
+
+input {
+  margin-top : 0 !important;
+}
+
 .dapp-flex-content {
   height: 100%;
   width: 100%;
