change view of payments

--- a/parking-dapp/client/parking-dapp.less
+++ b/parking-dapp/client/parking-dapp.less
@@ -30,3 +30,22 @@ input {
 .dapp-block-button {
   width: 100%
 }
+
+.payment {
+  width: 100%;
+}
+
+.payment-col {
+  display: inline-block;
+  width: 49%;
+}
+
+.left {
+  background: #e6ffe6;
+  border: solid #e6ffe6 1px;
+}
+
+.right {
+  background: #ffe6e6;
+  border: solid #ffe6e6 1px;
+}
