update comments like in master thesis

--- a/ui/client/parking-dapp.less
+++ b/ui/client/parking-dapp.less
@@ -1,5 +1,5 @@
-// libs
-@import '{ethereum:dapp-styles}/dapp-styles.less';
+@import '{ethereum:dapp-styles}/dapp-styles.less';//einziger LESS Ausdruck
+//ab hier CSS
 
 html, body {
   height: 100%;
